# TP_tech

./: README.md
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.cpp  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: lib_test.cpp  main.cpp  main.h  main_test.cpp
task3/: CMakeLists.txt  main_lib.cpp
task3/include/: buffer.h
task3/src/: CMakeLists.txt  buffer.cpp
task4/: CMakeLists.txt
task4/B/: CMakeLists.txt  lib.cpp  lib.h
task4/C/: CMakeLists.txt  main.cpp  main.h  main_test.cpp  tests.cpp
task5/: .gitignore  CMakeLists.txt  install_deps.sh
task5/cmake/: CodeCoverage.cmake
task5/examples/: 00-main.cpp  01-main.cpp  02-main.cpp  03-main.cpp  CMakeLists.txt
task5/include/: Functions.h  Tree.h  Weather.h
task5/src/00-aplusb/: CMakeLists.txt
task5/src/01-simple-library/: CMakeLists.txt  Functions.cpp
task5/src/02-tree/: CMakeLists.txt  Tree.cpp
task5/src/03-weather/: CMakeLists.txt  Weather.cpp
task5/tests/: CMakeLists.txt
task5/tests/00-aplusb/: CMakeLists.txt  test.cpp
task5/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  CMakeLists.txt  LeapTestCase.cpp  LeapTestCase.h
task5/tests/02-tree/: CMakeLists.txt  TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: CMakeLists.txt  WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
